<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#25009688"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        android:fontFamily="@font/baloo_da"
        app:titleTextColor="@color/white"
        android:background="@color/purple_500"/>

    <LinearLayout
        android:layout_below="@id/myToolbar"
        android:id="@+id/upper_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cloudy"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/cloudy" />

        <TextView
            android:id="@+id/n_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo_da"
            android:textSize="30sp"
            android:text="32&#176;c"/>

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_da"
            android:textSize="19sp"
            android:text="London, UK"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_da"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="SUNNY"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_below="@id/upper_header"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_margin="7dp"
            style="@style/cardViewStyle">

            <LinearLayout
                style="@style/linearLayoutStyle">

                <TextView
                    android:id="@+id/humidity"
                    style="@style/valuesWeatherItem"
                    android:fontFamily="@font/baloo_da" />

                <ImageView
                    style="@style/ImageIcon"
                    android:src="@drawable/humidity"/>

                <TextView
                    android:text="@string/Humidity"
                    style="@style/textViewStyle"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/cardViewStyle">

            <LinearLayout
                style="@style/linearLayoutStyle">

                <TextView
                    android:id="@+id/airFlow"
                    style="@style/valuesWeatherItem"/>

                <ImageView
                    style="@style/ImageIcon"
                    android:src="@drawable/airflow"/>


                <TextView
                    android:text="@string/wind_speed"
                    style="@style/textViewStyle"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/mainContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/mainContent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_margin="7dp"
            style="@style/cardViewStyle">

            <LinearLayout
                style="@style/linearLayoutStyle">

                <TextView
                    android:id="@+id/minTemp"
                    style="@style/valuesWeatherItem"/>

                <ImageView
                    style="@style/ImageIcon"
                    android:src="@drawable/min"/>


                <TextView
                    android:text="@string/min_temp"
                    style="@style/textViewStyle"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            style="@style/cardViewStyle">

            <LinearLayout
                style="@style/linearLayoutStyle">

                <TextView
                    android:id="@+id/maxTemp"
                    style="@style/valuesWeatherItem" />

                <ImageView
                    style="@style/ImageIcon"
                    android:src="@drawable/max"/>

                <TextView
                    android:text="@string/max_temp"
                    style="@style/textViewStyle"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/mainContent3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/mainContent2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_margin="7dp"
            style="@style/cardViewStyle">

            <LinearLayout
                style="@style/linearLayoutStyle">

                <TextView
                    android:id="@+id/cloud_cpt"
                    style="@style/valuesWeatherItem"/>

                <ImageView
                    style="@style/ImageIcon"
                    android:src="@drawable/cloudpct"/>


                <TextView
                    android:text="@string/cloud_pct"
                    style="@style/textViewStyle"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/cardViewStyle">

            <LinearLayout
                style="@style/linearLayoutStyle">

                <TextView
                    android:id="@+id/feelsLike"
                    style="@style/valuesWeatherItem" />

                <ImageView
                    style="@style/ImageIcon"
                    android:src="@drawable/feels_like"/>

                <TextView
                    android:text="@string/feels_like"
                    style="@style/textViewStyle"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search_24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="22dp"/>

</RelativeLayout>